# aimlab-gridshot-with-opencv-python

./: .gitignore  LICENSE  README.md  README_CN.md  capture.py  config.py  controller.py  main.py  pyproject.toml  roi_calibrator.py  tracker.py  vision.py
tools/: auto_sensitivity_calibrator.py  roi_calibrator.py
